--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,5 @@
-<div class="container">
+<h1 align="center">Todo App</h1>
 
-  <div class="row">
-    <h1 style="text-align: center;">Todo App</h1>
-  </div>
+<app-todo-list></app-todo-list>
 
-  <div class="row">
-    <app-todo-list></app-todo-list>
-  </div>
 
-</div>
